<resources>
    <string name="app_name">AndroidFinalProj</string>
    <string name="welcome">Welcome!</string>
    <string name="ask">What would you like to do today?</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="trivia_time">Trivia Time</string>
    <string name="bear_images">Bear Images</string>
    <string name="aviation_tracker">Aviation Tracker</string>
    <string name="help">Help</string>
    <string name="history">History</string>

    <string name="c_instructions">Welcome to the currency converter. To use this app, enter an amount to convert. Enter the currency you are converting from. Next, enter the currency you want to convert into. Hit the convert button to get your result. Press the history button to view your past results. </string>
    <string name="enter_amount">Amount:</string>
    <string name="old_c">Currency:</string>
    <string name="new_c">New Currency:</string>
    <string name="enter_here">Enter here..</string>
    <string name="convert">Convert</string>
    <string name="title">How to use</string>
    <string name="understand">Yes, I understand</string>
    <string name="delete">Delete</string>
    <string name="newest">Newest</string>

    <string name="destination">Destination:\ </string>
    <string name="terminal">Terminal:\ </string>
    <string name="delay">Delay:\ </string>
    <string name="gate">Gate:\ </string>
    <string name="search">Search</string>
    <string name="airport_code">Airport code</string>
    <string name="no_delay">No delay</string>
    <string name="flight_number">Flight No:\ </string>
    <string name="date">Date:\ </string>
    <string name="airline">Airline:\ </string>
    <string name="saved_flights">Saved Flights</string>

</resources>