<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.MainActivity">

    <TextView
        android:id="@+id/aviation"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="20dp"
        android:contentDescription=" "
        android:text="@string/aviation_tracker"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aviationBtn" />

    <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instructionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/ask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLabel" />

        <ImageButton
            android:id="@+id/triviaBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="396dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/trivia" />

    <ImageButton
        android:id="@+id/aviationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/airplane" />

    <ImageButton
        android:id="@+id/currencyBtn"
        android:layout_width="131dp"
        android:layout_height="121dp"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="396dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/currency" />

    <ImageButton
        android:id="@+id/bearBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="144dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/triviaBtn"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bear" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency_converter"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currencyBtn" />

    <TextView
        android:id="@+id/trivia"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="16dp"
        android:contentDescription=" "
        android:text="@string/trivia_time"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triviaBtn" />

    <TextView
        android:id="@+id/bear"
        android:layout_width="127dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="20dp"
        android:contentDescription=" "
        android:text="@string/bear_images"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bearBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>